# duser

./: AUTHORS  Makefile  Makefile.am  Makefile.in  Makefile.solaris  Makefile.solaris-static  Makefile.static  README  buildconf  cfg.c  cfg.h  compat.h  config.h.in  configure  configure.in  duser.c  duser.h  log.c  user.c  util.c  version.h
compat/: Makefile.am  Makefile.in  strcasestr.c  strchrnul.c
include/: cfg.h  config.h.in  duser.h  version.h
include/compat/: strcasestr.h  strchrnul.h
src/: Makefile.am  Makefile.in  cfg.c  compat.c  duser.c  log.c  mklist.c  user.c  util.c
