#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([duser], [1.0.0], [jhunkeler@stsci.edu], [duser], [https://github.com/jhunkeler/duser.git])
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(1.11.1)

AC_CONFIG_HEADERS([include/config.h])
AC_CONFIG_SRCDIR([src/duser.c])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Initializing libtool.
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
LIBTOOL="$LIBTOOL --silent"

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS_ONCE([fcntl.h limits.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS_ONCE([memset strcasecmp strdup strerror strncasecmp strstr])

# Detect if the host operating system is SunOS/Solaris as it behaves slightly different
# than GNU/Linux
case "$host_os" in
	*sunos*|solaris*)
		AC_DEFINE([HAVE_SOLARIS], 1, [host operating system is solaris])
	;;
	*)
esac

# Figure out where everything goes in the filesystem
AC_ARG_WITH(config-path,
	AC_HELP_STRING([--with-config-path=<pathname>],
		[specify the path for duser config files (default: /usr/local/etc/duser)]),
	[CFGPATH="$withval"], [CFGPATH="/usr/local/etc/duser"])
AC_SUBST(CONFIGDIR)

AC_DEFINE_UNQUOTED([CFG_PATH], "$CFGPATH", [duser configuration path])

# Compiler Warnings Options
AC_ARG_ENABLE(warnings,
AC_HELP_STRING([--enable-warnings],[Enable all sorts of warnings for debugging.]),
[CFLAGS="$CFLAGS -Wcast-qual -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wredundant-decls -Wshadow -Wwrite-strings -W -Wno-unused"],[])

AC_OUTPUT([Makefile compat/Makefile src/Makefile])
